Single property drivers for properties in the same datablock not evaluated in correct order #61030

Closed
opened 2019-01-30 18:22:09 +01:00 by Brecht Van Lommel · 3 comments

System Information
Operating system: Ubuntu 18.04
Graphics card: Quadro RTX 6000

Blender Version
Broken: 2.80 33dcf9f

Short description of error
When using single property drivers to access properties on the same datablock, drivers are not evaluated in the correct order. Spring has such a setup for shape keys.

Exact steps for others to reproduce the error
Edit BKE_object_handle_data_update to remove the shape key driver evaluation, which should be redundant.

In the attached file go one frame back and forth again, cube moves to different location.
shapekey_driver.blend

**System Information** Operating system: Ubuntu 18.04 Graphics card: Quadro RTX 6000 **Blender Version** Broken: 2.80 33dcf9f **Short description of error** When using single property drivers to access properties on the same datablock, drivers are not evaluated in the correct order. Spring has such a setup for shape keys. **Exact steps for others to reproduce the error** Edit `BKE_object_handle_data_update` to remove the shape key driver evaluation, which should be redundant. In the attached file go one frame back and forth again, cube moves to different location. [shapekey_driver.blend](https://archive.blender.org/developer/F6455439/shapekey_driver.blend)

Added subscriber: @brecht

Added subscriber: @brecht
Sergey Sharybin was assigned by Brecht Van Lommel 2019-01-30 18:22:33 +01:00

This issue was referenced by blender/blender@9a7ea778b3

This issue was referenced by blender/blender@9a7ea778b37538b0ff479c7fcbf00cdfe721d7fb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: studio/blender-studio#61030
No description provided.